fix(Modal): allow scroll if content overflows screen height

--- a/src/components/molecules/Modal/_components.modal.scss
+++ b/src/components/molecules/Modal/_components.modal.scss
@@ -7,6 +7,8 @@
   transform: translate(-50%, -50%);
   min-width: 600px;
   min-height: 500px;
+  max-height: 100%;
+  overflow: scroll;
   padding: 38px 38px 136px;
   box-sizing: border-box;
 }
